# AI-PM

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SDD.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
amplify/: backend.ts
amplify/data/: resource.ts
amplify/functions/greeting/: handler.ts  resource.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json
apps/web/.tanstack/tmp/: ed16baf1-c22939320c9a5ea25cd68fa6e5c2ff52
apps/web/src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts
apps/web/src/api/: tasks.ts
apps/web/src/components/: InlineEditForm.tsx  InlineTaskForm.tsx  TodoItem.tsx  TodoList.tsx
apps/web/src/hooks/: useGreeting.ts  useTodos.ts
apps/web/src/routes/: __root.tsx  _auth.tsx  index.tsx  sign-in.tsx
apps/web/src/routes/_auth/: dashboard.tsx
cloud-api/: Cargo.toml
cloud-api/migrations/: 0001_create_tasks.sql  0002_add_users.sql  0003_add_user_id.sql
cloud-api/src/: db.rs  main.rs
fractalist-core/: Cargo.toml
fractalist-core/src/: lib.rs  models.rs
shared-ui/: package.json
shared-ui/src/: index.ts
shared-ui/src/components/: CtaSection.tsx  FeaturesSection.tsx  FocusTimer.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  Sidebar.tsx  TaskCard.tsx
shared-ui/src/pages/: DashboardLayout.tsx  LandingPage.tsx
shared-ui/src/types/: bindings.ts
shared-ui/src/utils/: platform.ts
