[package]
name = "cloud-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# We point to the local folder instead of a version number

fractalist-core = { path = "../fractalist-core", features = ["sqlx"] }
axum = "0.7" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros", "migrate"] }
anyhow = "1"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
dotenvy = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }

