[package]
name = "fractalist-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
specta = { version = "=2.0.0-rc.23", features = ["derive", "collect", "chrono"] }
specta-typescript = "=0.0.10"
specta-serde = "=0.0.10" 
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.89"
thiserror = "2"
sqlx = { version = "0.8", features = ["sqlite"], optional = true }


[dev-dependencies]
serde_json = "1"

[features]
sqlx = ["dep:sqlx"]

